[package]
name = "icm42605-driver"
authors = ["Alex Moon"]
version = "0.1.0"
edition = "2024"
description = "An embedded async driver for the ICM-42605 6-axis inertial measurement unit"
repository = "https://github.com/tactile-eng/icm42605-driver"
license = "Apache-2.0"
keywords = ["embedded-hal-driver", "icm42605", "accelerometer", "gyro", "imu"]
categories = ["no-std", "embedded", "asynchronous", "hardware-support"]

[features]
"defmt" = ["embedded-hal/defmt-03", "embedded-hal-async/defmt-03", "dep:defmt"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
device-driver = "1.0.4"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
heapless = "0.8.0"
